fixed bug causing server to deduplicate all query characters (not just whitespace), increased loading spinner speed, cleaned up code

--- a/duckie/public/duckie.css
+++ b/duckie/public/duckie.css
@@ -94,7 +94,7 @@ input {
   -webkit-mask-image: url(/spinner.png);
   background-color: #516064;
   -webkit-animation: spinnerRotate;
-  -webkit-animation-duration: 3s;
+  -webkit-animation-duration: 2s;
   -webkit-animation-iteration-count: infinite;
   -webkit-animation-timing-function: linear;
 }
